Fix about and menu headers spacing

--- a/src/css/imports/rules.css
+++ b/src/css/imports/rules.css
@@ -11,11 +11,13 @@
 
   --code-font: {
     font-family: 'Share Tech Mono', monospace;
+    /*font-family: SFMono-Regular, source-code-pro, Menlo, Monaco, Consolas, Roboto Mono, Droid Sans Mono, Liberation Mono, Courier New, Courier, monospace; */
     font-weight: 400;
   };
 
   --paragraph-font: {
-    font-family: 'Source Sans Pro', Helvetica Neue, sans-serif;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
+    /*font-family: 'Source Sans Pro', Helvetica Neue, sans-serif;*/
   };
   
   --grid-background: {
