--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,7 +11,6 @@ html {
   font-size: var(--base-fontsize, 16px);
   line-height: var(--line-height, 18px);
   
-  -webkit-font-smoothing: subpixel-antialiased;
   text-rendering: optimizeLegibility;
   font-feature-settings: "kern" 1;
 }
@@ -86,14 +85,18 @@ body > header {
 
   
   /** 3em of space between submenus*/
-  & #menu-software  , 
-  & #menu-work  {
+  & .menu-header  {
     padding-bottom: 3rem;
   }
+  & .menu-header:first-child {
+    margin-top: 1rem;
+  }
   
+
   /** About aligned at bottom */
-  & #menu-about {
+  & .menu-header:last-child {
     margin-top: auto;
+    margin-bottom: 3rem;
   }
 }
 
@@ -293,7 +296,8 @@ body.blog {
 /**
  * Work pages
  */
-body.work {
+body.work ,
+body.about {
 
   /* Image showcase */
   & .showcase {
@@ -436,10 +440,9 @@ body.work {
  
  
  /**
-  * About Page
+  * About Section
   */
-body.about {
-  & section.about {
+section.about {
     @apply --paragraph-font;
     
     display: flex;
@@ -508,7 +511,6 @@ body.about {
       }
     }
   }
-}
  
  /*
   * About menu always visible 
